--- a/prueba-shell/src/app/app.component.scss
+++ b/prueba-shell/src/app/app.component.scss
@@ -9,3 +9,14 @@
     margin: 0 auto;
     padding: 20px;
 }
+
+.image {
+    margin: 10px;
+    width: 20%;
+}
+
+.navContainer {
+    display: flex;
+    align-items: center;
+    justify-content: space-between
+}
